# ajml-lang

./: .gitignore  README.md  SPEC.md  pyproject.toml
ajml/: __init__.py  __main__.py  assembler.py  cli.py  codegen.py  errors.py  preprocessor.py  validator.py
tests/: test_assembler.py  test_cli.py  test_codegen.py  test_preprocessor.py  test_validator.py
